UPDATE: Se agrega sistema para marcar ganadores semanales

--- a/frontend/admin/app/modules/home/home.template.html
+++ b/frontend/admin/app/modules/home/home.template.html
@@ -1,5 +1,5 @@
-<div class="ui segment" ng-show="openview">
-	<h1 class="ui header">Admin Galería</h2>
+<div id="home" ng-show="openview" class="ui segment">
+	<h1 class="ui header">Admin Galería</h1>
 	<div class="ui divider"></div>
 	<table class="ui celled structured table">
 		<thead>
