UPDATE: Se agrega fecha de sorteo a sistema

--- a/frontend/admin/app/modules/sorteos/modal.template.html
+++ b/frontend/admin/app/modules/sorteos/modal.template.html
@@ -1,6 +1,6 @@
 <div class="ui segment sorteo">
 	<div class="header">
-		<h4>Selecciona un ganador, Fecha de Sorteo: 19/19/2999</h4>
+		<h4>Selecciona un ganador, Fecha de Sorteo: {{fechaSorteo}}</h4>
 	</div>
 	<div class="ui divider"></div>
 	<div class="content">
