UPDATE: Se activa vista de ganadores semanales

--- a/frontend/app/modules/ganadores/ganadores.template.html
+++ b/frontend/app/modules/ganadores/ganadores.template.html
@@ -2,7 +2,7 @@
 
 <img src="img/ganadores/movil/title.png" class="title-semanal">
 
-<!-- <div class="packs">
+<div class="packs">
 	<div class="content">
 		<div class="list" ng-init="setStyle()">
 			<ul ng-style="{width:elementWidth * sorteos.length, 'margin-left': elementWidth * indexList * -1}">
@@ -20,13 +20,13 @@
 			</div>
 		</div>
 	</div>
-</div> -->
+</div>
 
-<div class="packs no-winners">
+<!-- <div class="packs no-winners">
 	<p>
 		El Miercoles 8 de Junio se eligirá el primer ganador de uno de los Pack del Hincha
 	</p>
-</div>
+</div> -->
 
 <div class="super">
 	<div class="content">
