UPDATE: Nuevos textos para compartir

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 
     <!-- Open Graph -->
     <meta property="og:title" content="El Pilucho con Campanario" />
-    <meta property="og:description" content="Ingresa ahora, dale un grito de apoyo a Chile y participa por fabulosos premios" />
+    <meta property="og:description" content="Acabo de alentar a Chile junto al Pilucho. Ahora estoy participando por increíbles premios. Escucha mi arenga aquí." />
     <meta property="og:image" content="https://pilucho.campanario.cl/img/share.jpg" />
     <!-- / Open Graph -->
 
