UPDATE: Se genera servicio para limpiar archivos no registrados en el servidor desde el panel de administración

--- a/frontend/admin/app/modules/home/home.template.html
+++ b/frontend/admin/app/modules/home/home.template.html
@@ -1,5 +1,10 @@
 <div id="home" ng-show="openview" class="ui segment">
 	<h1 class="ui header">Admin Galería</h1>
+	<div class="ui menu">
+		<div class="item">
+			<div class="ui primary button" ng-click="clearFiles()">Limpiar Archivos</div>
+		</div>
+	</div>
 	<div class="ui divider"></div>
 	<table class="ui celled structured table">
 		<thead>
