UPDATE: Se publica ganador Super Premio

--- a/frontend/app/modules/ganadores/ganadores.template.html
+++ b/frontend/app/modules/ganadores/ganadores.template.html
@@ -42,8 +42,12 @@
 
 <div class="super">
 	<div class="content">
+		<p class="sorteo">
+			SORTEO: 24/06/2016
+		</p>
 		<p>
-			El viernes 24 de Junio se eligirá el ganador del Super Premio.
+			<img src="//graph.facebook.com/252130031817860/picture?type=square">
+			<span class="name">Juan Zamora</span>
 		</p>
 	</div>
 </div>
